[project]
name = "langchain-middleware-stack"
version = "0.1.0"
description = "Declarative middleware ordering via slug-based DAG resolution for LangChain and beyond"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["langchain", "middleware", "agents", "dag", "topological-sort"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
yaml = ["PyYAML>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "build>=1.0",
    "twine>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["langchain_middleware_stack"]
